tests/src/frontend/typechecking/invalid/inherit_typeclass_params_named_dupe.sk
// named constructor TC inheritance, field already bound
trait Foo{s: String}

class Bar{s: String} uses Foo
